# Secure-Tasker-Updated

./: .gitignore  backup.sql  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env_docker  .gitignore  Dockerfile  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml
backend/mysite/: settings.py  urls.py  wsgi.py
backend/secret_data/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
backend/secret_data/migrations/: 0001_initial.py  0003_delete_topsecretleveldata.py
backend/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_task_date_completed_task_user_completed_and_more.py  0003_completedtasks.py  0004_delete_completedtasks_remove_task_date_completed_and_more.py  0005_task_date_completed_task_user_completed.py  0006_alter_task_user_completed.py  0006_remove_task_user_completed.py  0007_remove_task_user_completed.py  0007_task_user_completed.py  0008_alter_task_user_completed.py  0008_remove_task_date_completed.py  0009_remove_task_date_completed_task_delete_this.py  0009_task_user_completed.py  0010_alter_task_user_completed.py  0011_merge_20260121_1752.py  0012_task_date_completed.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: Layout.css  (+17 more)
nginx/: nginx.conf
notes/: curl_commands.txt  debug.txt  future_features.txt  links.txt  todo.txt  url_paths.txt  urls.txt  urls_paths.txt  user_info.txt
secure_tasker_application/mysite/: settings.py
(+10 files in other folders)
